7 February 2024: Yorgos
	- Fix #1006: Can't find protobuf-c package since #999.

30 January 2024: Wouter
	- Merge #999: Search for protobuf-c with pkg-config.

23 January 2024: Yorgos
	- Update message TTL when using cached RRSETs. It could result in
	  non-expired messages with expired RRSETs (non-usable messages by
	  Unbound).

22 January 2024: Yorgos
	- Update error printout for duplicate trust anchors to include the
	  trust anchor name (relates to #920).

22 January 2024: Wouter
	- Fix for #997: Print details for SSL certificate failure.

17 January 2024: Wouter
	- Update workflow for ports to use newer openssl on windows compile.
	- Fix warning for windres on resource files due to redefinition.

16 January 2024: Wouter
	- Fix to link with libssp for libcrypto and getaddrinfo check for
	  only header. Also update crosscompile to remove ssp for 32bit.
	- Merge #993: Update b.root-servers.net also in example config file.

15 January 2024: Wouter
	- Fix to link with -lcrypt32 for OpenSSL 3.2.0 on Windows.

9 January 2024: Wouter
	- Merge #988: Fix NLnetLabs#981: dump_cache truncates large records.

5 January 2024: Wouter
	- Merge #987: skip edns frag retry if advertised udp payload size is
	  not smaller.
	- Fix unit test for #987 change in udp1xxx retry packet send.

4 January 2024: Wouter
	- Remove unneeded newlines and improve indentation in remote control
	  code.

3 January 2024: Wouter
	- Merge #980: DoH: reject non-h2 early. To fix #979: Improve errors
	  for non-HTTP/2 DoH clients.
	- Merge #985: Add DoH and DoT to dnstap message.
	- Fix #983: Sha1 runtime insecure change was incomplete.

22 December 2023: Yorgos
	- Update example.conf with cookie options.

8 December 2023: Yorgos
	- Merge PR #973: Use the origin (DNAME) TTL for synthesized CNAMEs as
	  per RFC 6672.

8 December 2023: Wouter
	- Fix root_zonemd unit test, it checks that the root ZONEMD verifies,
	  now that the root has a valid ZONEMD.

7 December 2023: Wouter